--- a/Week2/day1.ipynb
+++ b/Week2/day1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 2,
    "id": "1af83fb6",
    "metadata": {},
    "outputs": [],
@@ -13,26 +13,22 @@
     "import requests\n",
     "from dotenv import load_dotenv\n",
     "from openai import OpenAI\n",
-    "from IPython.display import Markdown, display"
+    "from IPython.display import Markdown, display\n",
+    "from dotenv import load_dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 3,
    "id": "614c0bf2",
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[138]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Load environment variables in a file called .env\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# Print the key prefixes to help with any debugging\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# You can choose whichever providers you like - or all Ollama\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[43mload_dotenv\u001b[49m\u001b[43m(\u001b[49m\u001b[43moverride\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m      6\u001b[39m openai_api_key = os.getenv(\u001b[33m'\u001b[39m\u001b[33mOPENAI_API_KEY\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      7\u001b[39m google_api_key = os.getenv(\u001b[33m'\u001b[39m\u001b[33mGOOGLE_API_KEY\u001b[39m\u001b[33m'\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/My_Research/llm_engineering/.venv/lib/python3.12/site-packages/dotenv/main.py:374\u001b[39m, in \u001b[36mload_dotenv\u001b[39m\u001b[34m(dotenv_path, stream, verbose, override, interpolate, encoding)\u001b[39m\n\u001b[32m    371\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[32m    373\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m dotenv_path \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m stream \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m374\u001b[39m     dotenv_path = \u001b[43mfind_dotenv\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    376\u001b[39m dotenv = DotEnv(\n\u001b[32m    377\u001b[39m     dotenv_path=dotenv_path,\n\u001b[32m    378\u001b[39m     stream=stream,\n\u001b[32m   (...)\u001b[39m\u001b[32m    382\u001b[39m     encoding=encoding,\n\u001b[32m    383\u001b[39m )\n\u001b[32m    384\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m dotenv.set_as_environment_variables()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/My_Research/llm_engineering/.venv/lib/python3.12/site-packages/dotenv/main.py:313\u001b[39m, in \u001b[36mfind_dotenv\u001b[39m\u001b[34m(filename, raise_error_if_not_found, usecwd)\u001b[39m\n\u001b[32m    309\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m sys.gettrace() \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m    311\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m usecwd \u001b[38;5;129;01mor\u001b[39;00m _is_interactive() \u001b[38;5;129;01mor\u001b[39;00m _is_debugger() \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(sys, \u001b[33m\"\u001b[39m\u001b[33mfrozen\u001b[39m\u001b[33m\"\u001b[39m, \u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[32m    312\u001b[39m     \u001b[38;5;66;03m# Should work without __file__, e.g. in REPL or IPython notebook.\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m313\u001b[39m     path = \u001b[43mos\u001b[49m\u001b[43m.\u001b[49m\u001b[43mgetcwd\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    314\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    315\u001b[39m     \u001b[38;5;66;03m# will work for .py files\u001b[39;00m\n\u001b[32m    316\u001b[39m     frame = sys._getframe()\n",
-      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI API Key exists and begins sk-proj-\n",
+      "Google API Key exists and begins AIzaSyAl\n"
      ]
     }
    ],
@@ -58,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e37fb9d4",
    "metadata": {},
    "outputs": [],
@@ -81,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "65dab0a4",
    "metadata": {},
    "outputs": [],
@@ -93,10 +89,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8c32386d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Why did the LLM engineer bring a ladder to their training session?\n",
+       "\n",
+       "Because they heard they needed to work on their “layers” to reach expert level!"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "response = openai.chat.completions.create(model=\"gpt-4.1-mini\", messages=tell_a_joke)\n",
     "display(Markdown(response.choices[0].message.content))"
@@ -104,10 +115,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5bd14150",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "models/gemini-2.5-flash\n",
+      "models/gemini-2.5-pro\n",
+      "models/gemini-2.0-flash\n",
+      "models/gemini-2.0-flash-001\n",
+      "models/gemini-2.0-flash-exp-image-generation\n",
+      "models/gemini-2.0-flash-lite-001\n",
+      "models/gemini-2.0-flash-lite\n",
+      "models/gemini-exp-1206\n",
+      "models/gemini-2.5-flash-preview-tts\n",
+      "models/gemini-2.5-pro-preview-tts\n",
+      "models/gemma-3-1b-it\n",
+      "models/gemma-3-4b-it\n",
+      "models/gemma-3-12b-it\n",
+      "models/gemma-3-27b-it\n",
+      "models/gemma-3n-e4b-it\n",
+      "models/gemma-3n-e2b-it\n",
+      "models/gemini-flash-latest\n",
+      "models/gemini-flash-lite-latest\n",
+      "models/gemini-pro-latest\n",
+      "models/gemini-2.5-flash-lite\n",
+      "models/gemini-2.5-flash-image\n",
+      "models/gemini-2.5-flash-preview-09-2025\n",
+      "models/gemini-2.5-flash-lite-preview-09-2025\n",
+      "models/gemini-3-pro-preview\n",
+      "models/gemini-3-flash-preview\n",
+      "models/gemini-3-pro-image-preview\n",
+      "models/nano-banana-pro-preview\n",
+      "models/gemini-robotics-er-1.5-preview\n",
+      "models/gemini-2.5-computer-use-preview-10-2025\n",
+      "models/deep-research-pro-preview-12-2025\n",
+      "models/gemini-embedding-001\n",
+      "models/aqa\n",
+      "models/imagen-4.0-generate-preview-06-06\n",
+      "models/imagen-4.0-ultra-generate-preview-06-06\n",
+      "models/imagen-4.0-generate-001\n",
+      "models/imagen-4.0-ultra-generate-001\n",
+      "models/imagen-4.0-fast-generate-001\n",
+      "models/veo-2.0-generate-001\n",
+      "models/veo-3.0-generate-001\n",
+      "models/veo-3.0-fast-generate-001\n",
+      "models/veo-3.1-generate-preview\n",
+      "models/veo-3.1-fast-generate-preview\n",
+      "models/gemini-2.5-flash-native-audio-latest\n",
+      "models/gemini-2.5-flash-native-audio-preview-09-2025\n",
+      "models/gemini-2.5-flash-native-audio-preview-12-2025\n",
+      "models/lyria-realtime-exp\n"
+     ]
+    }
+   ],
    "source": [
     "models = gemini.models.list()\n",
     "for model in models:\n",
