Saved all local files

--- a/Hugging_Face_Transformers/HuggingFace_Question_Answering.ipynb
+++ b/Hugging_Face_Transformers/HuggingFace_Question_Answering.ipynb
@@ -5,12 +5,20 @@
    "id": "8c63fea8",
    "metadata": {},
    "source": [
-    "\t### Text Translator\n",
-    "\tThis code loads a pretrained GPT-2 causal language model, runs it on Apple Silicon using MPS, and generates a short continuation of text from a given prompt using Hugging Face’s high-level pipeline API.\n",
-    "    •\ttorch: Loads PyTorch, the deep learning framework that runs the model.\n",
-    "\t•\tpipeline: A high-level abstraction that bundles tokenization → model inference → decoding into one call.\n",
-    "\t•\tAutoTokenizer: Automatically loads the correct tokenizer for the chosen model.\n",
-    "\t•\tAutoModelForCausalLM: Loads a causal language model (predicts the next token based only on previous tokens)."
+    "\t### Text Question answer\n",
+    "This code uses a pretrained AI model to answer a question based on a given passage of text (extractive question answering). Here’s a clear, step-by-step explanation.\n",
+    "\n",
+    " \t•\ttorch → runs the neural network\n",
+    "\t•\ttransformers → library from Hugging Face\n",
+    "\t•\tAutoModelForQuestionAnswering → loads a model trained to find answers inside text\n",
+    "\t•\tAutoTokenizer → converts text into tokens the model understands\n",
+    "\t•\tpipeline → simplifies inference into a single call\n",
+    "\t•\tA DistilBERT model\n",
+    "\t•\tFine-tuned on the SQuAD dataset\n",
+    "\t•\tDesigned for extractive QA (the answer must appear in the context text)\n",
+    "\t•\tTokenizer breaks text into subwords\n",
+    "\t•\tModel learns which span of text best answers the question\n",
+    "\t•\t.to(\"mps\") runs inference on Apple Silicon GPU\n"
    ]
   },
   {
@@ -21,61 +29,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "b367cee9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/robertkigobe/Documents/My_Research/llm_engineering/.venv/bin/python: No module named pip\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install sentencepiece"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "1e289b9a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "This tokenizer cannot be instantiated. Please make sure you have `sentencepiece` installed in order to use this tokenizer.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtransformers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m pipeline, AutoModelForSeq2SeqLM, AutoTokenizer\n\u001b[32m      4\u001b[39m model_id =\u001b[33m\"\u001b[39m\u001b[33mHelsinki-NLP/opus-mt-en-fr\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m tokenizer = \u001b[43mAutoTokenizer\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfrom_pretrained\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel_id\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      6\u001b[39m model = AutoModelForSeq2SeqLM.from_pretrained(model_id).to(\u001b[33m\"\u001b[39m\u001b[33mmps\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      7\u001b[39m translator = pipeline(\u001b[33m\"\u001b[39m\u001b[33mtranslation_en_to_fr\u001b[39m\u001b[33m\"\u001b[39m, model=model, tokenizer=tokenizer, device=\u001b[33m\"\u001b[39m\u001b[33mmps\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/My_Research/llm_engineering/.venv/lib/python3.12/site-packages/transformers/models/auto/tokenization_auto.py:1180\u001b[39m, in \u001b[36mAutoTokenizer.from_pretrained\u001b[39m\u001b[34m(cls, pretrained_model_name_or_path, *inputs, **kwargs)\u001b[39m\n\u001b[32m   1178\u001b[39m             \u001b[38;5;28;01mreturn\u001b[39;00m tokenizer_class_py.from_pretrained(pretrained_model_name_or_path, *inputs, **kwargs)\n\u001b[32m   1179\u001b[39m         \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m1180\u001b[39m             \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m   1181\u001b[39m                 \u001b[33m\"\u001b[39m\u001b[33mThis tokenizer cannot be instantiated. Please make sure you have `sentencepiece` installed \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1182\u001b[39m                 \u001b[33m\"\u001b[39m\u001b[33min order to use this tokenizer.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1183\u001b[39m             )\n\u001b[32m   1185\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m   1186\u001b[39m     \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mUnrecognized configuration class \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mconfig.\u001b[34m__class__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m to build an AutoTokenizer.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m   1187\u001b[39m     \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mModel type should be one of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m, \u001b[39m\u001b[33m'\u001b[39m.join(c.\u001b[34m__name__\u001b[39m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mfor\u001b[39;00m\u001b[38;5;250m \u001b[39mc\u001b[38;5;250m \u001b[39m\u001b[38;5;129;01min\u001b[39;00m\u001b[38;5;250m \u001b[39mTOKENIZER_MAPPING)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1188\u001b[39m )\n",
-      "\u001b[31mValueError\u001b[39m: This tokenizer cannot be instantiated. Please make sure you have `sentencepiece` installed in order to use this tokenizer."
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c7a80581bb3b4bd8aa038801f01410a8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/48.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9db1321ad9be4d898c91b3c49d0fd507",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/451 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a05967a8aa7042a7999e914a119c6cc6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.txt:   0%|          | 0.00/232k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d8c22ec61c4349119dd639b0a60b3867",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json:   0%|          | 0.00/466k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "534b5f19ac9d4e419a8b3857558e685c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/265M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use mps\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "70%\n"
      ]
     }
    ],
    "source": [
     "import torch\n",
-    "from transformers import pipeline, AutoModelForSeq2SeqLM, AutoTokenizer\n",
+    "from transformers import pipeline, AutoModelForQuestionAnswering, AutoTokenizer\n",
     "\n",
-    "model_id =\"Helsinki-NLP/opus-mt-en-fr\"\n",
+    "model_id =\"distilbert-base-uncased-distilled-squad\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
-    "model = AutoModelForSeq2SeqLM.from_pretrained(model_id).to(\"mps\")\n",
-    "translator = pipeline(\"translation_en_to_fr\", model=model, tokenizer=tokenizer, device=\"mps\")\n",
-    "result = translator(\"The weather is nice today\")\n",
-    "print(result[0]['translation_text'])"
+    "model = AutoModelForQuestionAnswering.from_pretrained(model_id).to(\"mps\")\n",
+    "\n",
+    "qa = pipeline(\"question-answering\", model=model, tokenizer=tokenizer, device=\"mps\")\n",
+    "context = (\"\"\"The ocean covers 70% of the earth's surface and is vital to life on our planet\n",
+    "                It regulates climate, provides food, and supports vasts array of biodiversity\"\"\")\n",
+    "question = (\"What percentage of the earth's plannet is covered by the ocean?\")\n",
+    "result = qa(question=question, context=context)\n",
+    "print(result['answer'])"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c3f76278",
+   "cell_type": "markdown",
+   "id": "54524846",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "This code reads a paragraph and correctly extracts the answer to a specific question from it, using a pretrained AI model running locally on your Mac."
+   ]
   }
  ],
  "metadata": {
