--- a/Hugging_Face_Transformers/HuggingFace_Text_generator.ipynb
+++ b/Hugging_Face_Transformers/HuggingFace_Text_generator.ipynb
@@ -5,7 +5,7 @@
    "id": "8c63fea8",
    "metadata": {},
    "source": [
-    "\t### Text Gwnerators\n",
+    "\t### Text Generators\n",
     "\tThis code loads a pretrained GPT-2 causal language model, runs it on Apple Silicon using MPS, and generates a short continuation of text from a given prompt using Hugging Face’s high-level pipeline API.\n",
     "    •\ttorch: Loads PyTorch, the deep learning framework that runs the model.\n",
     "\t•\tpipeline: A high-level abstraction that bundles tokenization → model inference → decoding into one call.\n",
