--- a/Hugging_Face_Transformers/HuggingFace_Text_Translator.ipynb
+++ b/Hugging_Face_Transformers/HuggingFace_Text_Translator.ipynb
@@ -6,11 +6,21 @@
    "metadata": {},
    "source": [
     "\t### Text Translator\n",
-    "\tThis code loads a pretrained GPT-2 causal language model, runs it on Apple Silicon using MPS, and generates a short continuation of text from a given prompt using Hugging Face’s high-level pipeline API.\n",
-    "    •\ttorch: Loads PyTorch, the deep learning framework that runs the model.\n",
-    "\t•\tpipeline: A high-level abstraction that bundles tokenization → model inference → decoding into one call.\n",
-    "\t•\tAutoTokenizer: Automatically loads the correct tokenizer for the chosen model.\n",
-    "\t•\tAutoModelForCausalLM: Loads a causal language model (predicts the next token based only on previous tokens)."
+    "\tThis code uses a pretrained AI translation model to translate English text into French, running efficiently on your Mac’s GPU. Here’s a clear breakdown of every part.\n",
+    " \t•\ttorch → deep learning framework used to run the model\n",
+    "\t•\ttransformers → library from Hugging Face\n",
+    "\t•\tAutoModelForSeq2SeqLM → loads a sequence-to-sequence model (input language → output language)\n",
+    "\t•\tAutoTokenizer → converts text into tokens the model understands\n",
+    "\t•\tpipeline → high-level API that simplifies inference\n",
+    "\t•\tA MarianMT model trained by Helsinki-NLP\n",
+    "\t•\tSpecifically designed for English → French translation\n",
+    "\t•\tLightweight and fast for local inference\n",
+    "\t•\tSplits English text into subword tokens\n",
+    "\t•\tHandles vocabulary, padding, and special tokens automatically\n",
+    "\t•\tLoads the pretrained translation model\n",
+    "\t•\t.to(\"mps\") runs inference on Apple Silicon GPU (Metal Performance Shaders)\n",
+    "\n",
+    "\tThis code takes an English sentence and translates it into French using a pretrained neural machine translation model, running locally on your Mac’s GPU."
    ]
   },
   {
@@ -21,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "b367cee9",
    "metadata": {},
    "outputs": [
@@ -29,31 +39,172 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/robertkigobe/Documents/My_Research/llm_engineering/.venv/bin/python: No module named pip\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "/Users/robertkigobe/Documents/My_Research/llm_engineering/.venv/bin/python\n"
      ]
     }
    ],
    "source": [
-    "pip install sentencepiece"
+    "import sys\n",
+    "print(sys.executable)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
+   "id": "184295ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking in links: /var/folders/x8/7nzbrbkd1yn6x2v94qf825x40000gn/T/tmp8p229o53\n",
+      "Processing /var/folders/x8/7nzbrbkd1yn6x2v94qf825x40000gn/T/tmp8p229o53/pip-25.0.1-py3-none-any.whl\n",
+      "Installing collected packages: pip\n",
+      "Successfully installed pip-25.0.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!/Users/robertkigobe/Documents/My_Research/llm_engineering/.venv/bin/python -m ensurepip --upgrade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "87917329",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting sentencepiece\n",
+      "  Downloading sentencepiece-0.2.1-cp312-cp312-macosx_11_0_arm64.whl.metadata (10 kB)\n",
+      "Downloading sentencepiece-0.2.1-cp312-cp312-macosx_11_0_arm64.whl (1.3 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m6.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: sentencepiece\n",
+      "Successfully installed sentencepiece-0.2.1\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m26.0.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3 install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!/Users/robertkigobe/Documents/My_Research/llm_engineering/.venv/bin/python -m pip install sentencepiece"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "1e289b9a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "This tokenizer cannot be instantiated. Please make sure you have `sentencepiece` installed in order to use this tokenizer.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtransformers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m pipeline, AutoModelForSeq2SeqLM, AutoTokenizer\n\u001b[32m      4\u001b[39m model_id =\u001b[33m\"\u001b[39m\u001b[33mHelsinki-NLP/opus-mt-en-fr\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m tokenizer = \u001b[43mAutoTokenizer\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfrom_pretrained\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel_id\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      6\u001b[39m model = AutoModelForSeq2SeqLM.from_pretrained(model_id).to(\u001b[33m\"\u001b[39m\u001b[33mmps\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      7\u001b[39m translator = pipeline(\u001b[33m\"\u001b[39m\u001b[33mtranslation_en_to_fr\u001b[39m\u001b[33m\"\u001b[39m, model=model, tokenizer=tokenizer, device=\u001b[33m\"\u001b[39m\u001b[33mmps\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/My_Research/llm_engineering/.venv/lib/python3.12/site-packages/transformers/models/auto/tokenization_auto.py:1180\u001b[39m, in \u001b[36mAutoTokenizer.from_pretrained\u001b[39m\u001b[34m(cls, pretrained_model_name_or_path, *inputs, **kwargs)\u001b[39m\n\u001b[32m   1178\u001b[39m             \u001b[38;5;28;01mreturn\u001b[39;00m tokenizer_class_py.from_pretrained(pretrained_model_name_or_path, *inputs, **kwargs)\n\u001b[32m   1179\u001b[39m         \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m1180\u001b[39m             \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m   1181\u001b[39m                 \u001b[33m\"\u001b[39m\u001b[33mThis tokenizer cannot be instantiated. Please make sure you have `sentencepiece` installed \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1182\u001b[39m                 \u001b[33m\"\u001b[39m\u001b[33min order to use this tokenizer.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1183\u001b[39m             )\n\u001b[32m   1185\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m   1186\u001b[39m     \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mUnrecognized configuration class \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mconfig.\u001b[34m__class__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m to build an AutoTokenizer.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m   1187\u001b[39m     \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mModel type should be one of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m, \u001b[39m\u001b[33m'\u001b[39m.join(c.\u001b[34m__name__\u001b[39m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mfor\u001b[39;00m\u001b[38;5;250m \u001b[39mc\u001b[38;5;250m \u001b[39m\u001b[38;5;129;01min\u001b[39;00m\u001b[38;5;250m \u001b[39mTOKENIZER_MAPPING)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1188\u001b[39m )\n",
-      "\u001b[31mValueError\u001b[39m: This tokenizer cannot be instantiated. Please make sure you have `sentencepiece` installed in order to use this tokenizer."
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b98cdcc00357439e96ff0c5f886be3ce",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "source.spm:   0%|          | 0.00/778k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8c0a74eddf7142d2b6252069af167ba0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "target.spm:   0%|          | 0.00/802k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1ced81f4353649b2bd7602ea7be763a1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.json: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/robertkigobe/Documents/My_Research/llm_engineering/.venv/lib/python3.12/site-packages/transformers/models/marian/tokenization_marian.py:175: UserWarning: Recommended: pip install sacremoses.\n",
+      "  warnings.warn(\"Recommended: pip install sacremoses.\")\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4360cb3737a6477ea39c0dfd97db9c84",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "pytorch_model.bin:   0%|          | 0.00/301M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c8d95a8231384762bf602f478466827c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "generation_config.json:   0%|          | 0.00/293 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use mps\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "073a82ccfaf145fa9f85a4883da3f5f8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/301M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Le temps est beau aujourd'hui.\n"
      ]
     }
    ],
@@ -71,8 +222,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c3f76278",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J'ai tellement faim.\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = translator(\"I am so hungry\")\n",
+    "print(result[0]['translation_text'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8f0a2c74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mon nom est Robert.\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = translator(\"My name is robert\")\n",
+    "print(result[0]['translation_text'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3ec5ba8",
    "metadata": {},
    "outputs": [],
    "source": []
